# tcxSyphon

./: .gitignore  CMakeLists.txt  LICENSE  LICENSES.md  README.md  addon.json
.github/workflows/: ci.yml
example-client/: .gitignore  CMakeLists.txt
example-client/src/: main.cpp  tcApp.cpp  tcApp.h
example-server/: CMakeLists.txt  CMakePresets.json  addons.make
example-server/src/: main.cpp  tcApp.cpp  tcApp.h
src/: tcxSyphon.h  tcxSyphonClient.h  tcxSyphonClient.mm  tcxSyphonServer.h  tcxSyphonServer.mm
